# rambt

./: Cargo.toml  LICENSE  database.py  main.py
src/: app.rs  cli.rs  database.rs  main.rs  musicbrainz.rs  rating.rs  ui.rs  utils.rs
