[package]
name = "rambt"
version = "0.1.0"
edition = "2021"

[dependencies]
musicbrainz_rs = "0.9.1"
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.44.1", features = ["time", "macros", "rt-multi-thread"] }
rusqlite = "0.34.0"
crossterm = "0.28.1"
anyhow = "1.0.97"
dirs = "6.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
