[package]
name = "rambt"
version = "0.1.0"
edition = "2024"

[dependencies]
musicbrainz_rs = "0.12.0"
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["time", "macros", "rt-multi-thread"] }
rusqlite = "0.37.0"
crossterm = "0.29.0"
anyhow = "1.0.99"
dirs = "6.0.0"
serde = "1.0.219"
serde_json = "1.0.143"
clap = "4.5.45"
